k8s-local/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: pakalspot
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
