k8s-local/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: pakalspot
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres
