k8s-local/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: pakalspot
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
